<resources>
    <string name="app_name">Plants Basket</string>
    <string name="desc">Enjoy your life with <b>plants</b></string>
    <string name="shop">Shop Now</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="checkout">CheckOut</string>
    <string name="exp_date">Expiry Date</string>
    <string name="security_code">Security Code</string>
    <string name="submit">Submit</string>
    <string name="plant_explore">Plant Explore</string>
    <string name="organic">Organic</string>
    <string name="brooklyn">Brooklyn</string>
    <string name="brooklyn1">Brooklyn</string>
    <string name="amount">$35.99</string>
    <string name="todo">TODO</string>
    <string name="login">LOGIN</string>
    <string name="email_mobile_number">Email/Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_yet_create_one">Don\'t have an account yet?</string>
    <string name="or">Or</string>
    <string name="login_with">Login With</string>
    <string name="welcome_text">Welcome to</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_member_login">Already a member?</string>
    <string name="user_name">User Name</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="retrive_your_password">Retrieve Your Password</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="phone_number">Phone Number</string>
    <string name="failed">Failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>