<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp"
    android:translationZ="5dp"
    app:cardUseCompatPadding="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPlantsImg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1.3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck,ImageContrastCheck"
            android:contentDescription="TODO" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPlantsImg">

            <TextView
                android:id="@+id/tvItemPlantCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha=".5"
                android:text="@string/organic"
                android:textColor="#757575"
                android:textSize="10sp"
                tools:ignore="TextContrastCheck" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp">

                <TextView
                    android:id="@+id/tvItemPlantLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:alpha=".7"
                    android:singleLine="true"
                    android:text="@string/brooklyn1"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvItemPlantName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_max="wrap"
                    app:layout_constraintWidth_percent="0.6" />
                <TextView
                    android:id="@+id/tvItemPlantName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:text="@string/brooklyn"
                    android:layout_marginStart="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvItemPlantLocation"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textStyle="bold"
                    android:alpha=".9"
                    android:singleLine="true"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">
                <TextView
                    android:id="@+id/tvItemPlantPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:text="@string/amount"
                    android:singleLine="true"
                    android:textStyle="bold"
                    android:layout_toStartOf="@+id/ivItemPlantShopingCart"
                    android:layout_centerVertical="true"/>
                <ImageView
                    android:id="@+id/ivItemPlantShopingCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_shopping_cart"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/todo" />
            </RelativeLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>